# aprova_ai_project

./: main.py  requirements.in  requirements.txt  requirements_core.txt  requirements_data.txt  requirements_extra.txt  settings.py  setup.py
aprova_crew/: README.md  pyproject.toml
aprova_crew/src/aprova_crew/: crew.py  main.py
docs/: README.md
etl/: __init__.py  extract.py  load.py  transform.py
notebooks/: exploratory_analysis.ipynb
scripts/: create_etl_structure.py  create_tests_structure.py  create_utils_structure.py  create_ws_structure.py  move_scripts.py  remanescente_structure.py
tests/: __init__.py  test_agent.py  test_etl.py  test_scraper.py
utils/: __init__.py  data_processing.py  helpers.py
webscraping/: __init__.py  parser.py  scraper.py
