[tool.poetry]
name = "aprova_crew"
version = "0.1.0"
description = "aprova_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
aprova_crew = "aprova_crew.main:run"
train = "aprova_crew.main:train"
replay = "aprova_crew.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
